# python-project-lvl2

./: .gitignore  README.md  makefile  pyproject.toml  setup.cfg
.github/workflows/: README.md  github-actions-demo.yml  lint.yml  test1.yml
gendiff/: __init__.py  cli.py  diff.py  diff_tree.py  file.py  gendiff.py  gendiff1.py  make_tree.py  parse_args.py  reader.py  test_f.py
gendiff/formaters/: __init__.py  format.py  get_format.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_diff.py  test_foo.py
tests/: test_diff.py
tests/fixtures/: expected_result.py  result_recur_json
