[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "lvl 2 project"
authors = ["gas <pankot222@gmail.com>"]

#[tool.poetry.scripts]
#packages = [
#    {include = "gendiff"}, ]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
