[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "lvl 2 project"
authors = ["gas <pankot222@gmail.com>"]
#packages = [{ include = "gendiff" }, ]

[tool.poetry.scripts]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
