[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "lvl 2 project"
authors = ["gas <pankot222@gmail.com>"]
packages = [
    { include = "gendiff" },
]

[tool.poetry.scripts]
gendiff = 'gendiff.scripts.gendiff:main'

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#python3 -m pip install --user dist/*.whl
